--- a/src/components/Integration/ColumnSearch/columnSearch.module.css
+++ b/src/components/Integration/ColumnSearch/columnSearch.module.css
@@ -10,12 +10,6 @@
   text-overflow: ellipsis;
 }
 
-.scrollableContainer {
-  overflow-y: auto;
-  max-height: calc(90vh - 50px);
-  scrollbar-width: thin;
-}
-
 .columnItem {
   padding: 10px;
   margin: 2px 0;
@@ -34,17 +28,24 @@
   background-color: var(--background-color-3);
 }
 
+.scrollableContainer {
+  overflow-y: auto;
+  max-height: calc(90vh - 50px);
+  scrollbar-width: thin;
+  scrollbar-color: var(--scrollbar-thumb) var(--scrollbar-track);
+}
+
 .scrollableContainer::-webkit-scrollbar {
   width: 8px;
 }
 
 .scrollableContainer::-webkit-scrollbar-thumb {
-  background-color: #ccc;
+  background-color: var(--scrollbar-thumb);
   border-radius: 10px;
 }
 
 .scrollableContainer::-webkit-scrollbar-track {
-  background-color: #f4f4f4;
+  background-color: var(--scrollbar-track);
 }
 
 .input[type="search"]::-webkit-search-cancel-button,
@@ -75,7 +76,7 @@
 }
 
 .iconBtn:hover {
-  background: #f9f9f9;
+  background: var(--background-color-3);
 }
 
 
@@ -100,7 +101,7 @@
 }
 
 .fileHeader:hover {
-  background: #f9f9f9;
+  background: var(--background-color-3);
 }
 
 .fileColorPill {
